--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.15.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
     "parcel-bundler": "^1.12.4",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1"
+    "prettier": "2.2.1"
   },
   "dependencies": {
     "axios": "^0.21.0",
